--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>L O V E -  S I G N A L </title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/style2.css">
 	<link href="https://fonts.googleapis.com/css?family=Jua&display=swap" rel="stylesheet">  	
+	<meta name="title" content="사랑점">
+	<meta name="subject" content="이름으로 알아보는 너와 나의 하트 시그널은 몇 %? ">
+	<meta name="keywords" content="이름, 획수, 좋아하는 마음, 이름궁합, 이름으로 마음 알아보기">
     <script src="https://code.jquery.com/jquery.min.js" type="text/javascript"></script>
 	
 	<!-- Go to www.addthis.com/dashboard to customize your tools -->
