--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <div class="wrapper">
 	<div class="container">
 		<h1><b>L O V E -  S I G N A L</b></h1><br>
-		<h3 class="fs-subtitle" class="mt-3">이름으로 알아보는 우리의 관계</h3><br>
-		<h3 class="fs-subtitle">너와 나의&nbsp;시그널은?</h3>	<br>		
+		<h3 class="fs-subtitle" class="mt-3">이름으로 알아보는 우리의 관계</h3>
+		<h3 class="fs-subtitle">너와 나의&nbsp;시그널은?</h3>	<br>	
 		<div class="heart"></div>
 		
 		<table class="table" style="margin-left: auto; margin-right: auto;">
@@ -34,7 +34,6 @@
 		</table>
 		<div id="cont" style="display:none;">		
 			<table class="table" style="margin-left: auto; margin-right: auto;">
-				<tr><td>&nbsp;</td></tr><tr><td>&nbsp;</td></tr>
 				<tr><td id="percent"></td></tr>			
 			</table>		
 			<div class="circle-wrap">
@@ -54,7 +53,6 @@
 				<tr><td>좋아하는군요.</td></tr>
 				<tr><td>&nbsp;</td></tr>
 				<tr><td><button type="button" placeholder="바꾸기" onClick="btnChange();">이름 바꾸기</button></td></tr>
-				<tr><td>&nbsp;</td></tr>
 				<tr><td>
 					<!-- Go to www.addthis.com/dashboard to customize your tools --><div class="addthis_inline_share_toolbox_t9jo"></div>
 				</td></tr>
